objects/BMCServiceDesk__SYSPageObjectAssociation__c.object
<CustomObject>
    <description>This object allows you to store data for pages linked to every object.</description>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__objectName__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__pageName__c</fullName>
        <label>Page Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Page Object Association</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SYSPageObjectAssociation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSPageObjectAssociations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>